tests/baselines/reference/contextuallyTypingOrOperator.errors.txt
contextuallyTypingOrOperator.ts(1,39): error TS2869: This expression is always truthy. Did you mean to test something else?


==== contextuallyTypingOrOperator.ts (1 errors) ====
    var v: { a: (_: string) => number } = { a: s => s.length } || { a: s => 1 };
                                          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
    
    var v2 = (s: string) => s.length || function (s) { s.length };
    
    var v3 = (s: string) => s.length || function (s: number) { return 1 };
    var v4 = (s: number) => 1 || function (s: string) { return s.length };